--- a/css/main.css
+++ b/css/main.css
@@ -141,20 +141,12 @@ header nav ul {
   width: 100%;
 }
 
-header nav ul li a {
-
-}
-
 /* --- Mobile Styles - Homepage --- */
 
 .hero-area {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-}
-
-.hero-area .content-wrapper {
-
 }
 
 /* -- Aside -- */
@@ -168,14 +160,6 @@ aside {
 
 aside .content-wrapper {
   padding: 30px 20px;
-}
-
-.form-description {
-
-}
-
-.form {
-
 }
 
 /* -- Features -- */
@@ -245,10 +229,6 @@ footer .contact {
   margin-bottom: 50px;
 }
 
-.contact {
-
-}
-
 footer .social-icons {
   display: flex;
   justify-content: space-around;
@@ -274,10 +254,6 @@ footer .social-icons p {
   flex-flow: row wrap;
 }
 
-.mission .content-wrapper {
-
-}
-
 .map {
 
 }
@@ -287,10 +263,6 @@ footer .social-icons p {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-}
-
-.contact-section .content-wrapper {
-
 }
 
 .contact-content p{
@@ -411,15 +383,146 @@ footer .social-icons p {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+  /*Tablet styles here*/
+  /* General */
+  .content-wrapper {
+    max-width: 640px;
+    margin: 100px 0;
+  }
+
+  /* Header */
+
+  header {
+    justify-content: space-around;
+    padding: 33px 0;
+  }
+
+  header .content-wrapper {
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  header nav {
+    width: 20%;
+  }
+
+  header nav ul {
+    justify-content: space-between;
+  }
+ 
+  .header-divider {
+    display: none;
+  }
+
+  /* Hero Area */
+
+  /* Aside */
+
+  aside .content-wrapper {
+    margin: 50px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row wrap;
+  }
+
+  aside .content-wrapper .form-description
+  aside .content-wrapper .form {
+    width: 40%;
+    margin: 0;
+  }
+
+  /* Features */
+
+  .features article {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    flex-basis: 50%;
+  }
+
+  .features .features-item-description {
+    width: 50%;
+  }
+
+  /* Reviews */
+
+  .reviews article {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .reviews article div {
+    width: 49%;
+  }
+
+  /* Footer */
+
+  footer .content-wrapper {
+    width: 65%;
+    margin: 100px 0;
+  }
+
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  footer .contact {
+    margin-bottom: 0;
+  }
+
+  footer .copyright {
+    width: 100%;
+  }
+
+  /* ABOUT PAGE - TABLET */
+
+  .mission-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+  }
+
+  .mission-content p {
+    width: 45%;
+  }
+
+  .contact-section .content-wrapper h2 {
+    width: 80%;
+  }
+
+  .contact-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  /* FAQ PAGE - TABLET */
+
+  .faq .content-wrapper {
+    justify-content: space-between;
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+  .faq-content {
+    flex-basis: 40%;
+}
+
+  .faq h2 {
+    width: 100%;
+}
+}
+    
+@media only screen and (min-width: 1200px) {
+  /*Desktop styles here*/
+  /* General */
+  .content-wrapper {
+    max-width: 960px;
+    margin: 100px 0;
+  }
 }
 
 /* ==========================================================================
