--- a/css/main.css
+++ b/css/main.css
@@ -503,6 +503,10 @@ footer .social-icons p {
 
   /* FAQ PAGE - TABLET */
 
+  header {
+    padding: 15px 0;
+  }
+
   .faq .content-wrapper {
     justify-content: space-between;
 }
@@ -521,8 +525,54 @@ footer .social-icons p {
   /* General */
   .content-wrapper {
     max-width: 960px;
-    margin: 100px 0;
   }
+
+  /* Hero */
+  .hero-area h1 {
+    width: 60%;
+  }
+
+  /* Aside */
+  aside .content-wrapper {
+    justify-content: space-around;
+  }
+
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+    width: 30%;
+  }
+
+  /* Features */
+.features h2 {
+   width: 90%;
+}
+
+.features article {
+   flex-basis: 33%;
+}
+
+/* Reviews */ 
+.reviews article div {
+   width: 42%;
+}
+
+/* ==========================================================================
+About Page
+========================================================================== */
+.mission h2,
+.contact-section .content-wrapper h2 {
+   width: 95%;
+}
+
+/* ==========================================================================
+FAQ Page
+========================================================================== */
+.faq h2 {
+   width: 100%;
+}
+
+}
+
 }
 
 /* ==========================================================================
