--- a/css/main.css
+++ b/css/main.css
@@ -130,6 +130,14 @@ textarea {
     font-style: normal;
   }
 
+  img { 
+    width: 100%;
+  }
+   
+  figure {
+    margin: 0;
+  }
+
   .content-wrapper {
     width: 90%;
     margin: 50px 0;
@@ -153,8 +161,12 @@ header {
   padding: 15px 0;
 }
 
-header img {
-  width: 40%;
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 header .content-wrapper {
@@ -178,33 +190,36 @@ header nav {
   align-items: center;
   flex-flow: row wrap;
   width: 60%;
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
   width: 100%;
-
-  color: #e2e3ed;
-  text-transform: uppercase;
-  font-size: 1.125em;
-  font-weight: bold;
 }
 
 /* --- Mobile Styles - Homepage --- */
 
 .hero-area {
+  background-image: url("../img/hero-img.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 500px;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
 }
 
 .hero-area h1 {
-  color: #e2e3ed;
   font-size: 2.25em;
   font-family: 'Poppins', Helvetica, Arial, sans-serif;
   font-weight: 500; 
   line-height: 1.2; 
+  color: #e2e3ed;
 }
 /* -- Aside -- */
 
@@ -225,10 +240,6 @@ aside .form-description {
   padding-top: 25px;
 }
 
-aside .form{
-  margin-top: 30px;
-}
-
 aside h3 {
   color: #e2e3ed;
   font-size: 1.125em;
@@ -239,9 +250,41 @@ aside p {
   font-size: 1.142;
 }
 
+aside .form{
+  margin-top: 30px;
+}
+
+/* FORM INPUT STYLES */
+ 
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+ 
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 /* -- Features -- */
 
 .features {
+  background-image: url("../img/faded-img.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -251,6 +294,7 @@ aside p {
   margin: 0;
   font-size: 1.142em;
   line-height: 1.125em;
+  color: #e2e3ed;
 }
 
 .features h2 {
@@ -279,24 +323,24 @@ aside p {
   flex-flow: row wrap;
 
   background-color: #2a423a;
+  color: #e2e3ed;
 }
 .reviews h2 {
   margin-bottom: 40px;
-  font-size: 1.875em;
-  color: #e2e3ed;
   line-height: 1;
 }
 
 .reviews h3 {
   width: 55%;
   margin: 20px 0;
-  font-size: 1.125em;
-  color: #e2e3ed;
 }
 
-.reviews p {
-  font-size: 1.142em;
-  color: #e2e3ed;
+.reviews figure {
+  width: 95%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 /* Footer */
@@ -356,20 +400,6 @@ footer .social-icons p {
   background-color: #527158;
 }
 
-.mission h2 {
-  font-size: 3em;
-  color: #e2e3ed;
-}
-
-.mission p {
-  font-size: 1.125em;
-  color: #e2e3ed;
-}
-
-.map {
-
-}
-
 .contact-section {
   display: flex;
   justify-content: center;
@@ -384,12 +414,6 @@ footer .social-icons p {
   font-size: 1.125em;
   color: #fff;
 }
-
-.contact-content h4 {
-  font-size: 1.875em;
-  color: #fff;
-}
-
 
 /* --- Mobile Styles - Faq --- */
 
@@ -412,8 +436,6 @@ footer .social-icons p {
 
 .faq h2 {
   margin-bottom: 40px;
-  font-size: 3em;
-  color: #e2e3ed;
   line-height: 1;
 }
 
@@ -421,42 +443,10 @@ footer .social-icons p {
   line-height: 1.333;
 }
 
-.faq p {
-  font-size: 1.125em;
-  color: #e2e3ed;
-}
-
 .faq-content {
   margin-bottom: 50px;
 }
 
-/* FORM INPUT STYLES */
-
-aside .form {
-  margin-top: 30px;
-}
- 
-input[type=text] {
-  box-sizing: border-box;
-  width: 100%;
-  color: #2a423a;
-  font-style: italic;
-  padding: 1em;
-}
- 
-input[type=button] {
-  width: 100%;
-  padding: 20px 0;
-  margin-top: 20px;
-  background-color: #2a423a;
-  font-family: 'Poppins', Helvetica, Arial, sans-serif;
-  font-weight: 500;
-  font-size: 1.125em;
-  color: #e2e3ed;
-  border: none;
-  text-align: center;
-  text-transform: uppercase;
-}
 
 /* ==========================================================================
    Helper classes
@@ -580,16 +570,20 @@ input[type=button] {
     width: 20%;
   }
 
-  header figure {
-    width: 30%;
-  }
-
   header nav ul {
     justify-content: space-between;
   }
 
   .header-divider {
     display: none;
+  }
+
+  header figure {
+    width: 30%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-flow: row wrap;
   }
 
   /* Hero Area */
@@ -651,6 +645,15 @@ input[type=button] {
   .reviews h3 {
     width: 75%;
     margin: 0;
+  }
+
+  .reviews figure {
+    width: 45%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
 
   /**** Footer ****/
 
@@ -752,6 +755,14 @@ input[type=button] {
     padding: 15px 0;
   }
 
+  header figure {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+
   h2 {
     font-size: 2.25em;
   }
@@ -767,6 +778,7 @@ input[type=button] {
   }
 
   /* Hero */
+
   .hero-area h1 {
     width: 60%;
     font-size: 3.75em;
@@ -798,6 +810,14 @@ input[type=button] {
 
 .reviews h2 {
   padding-bottom: 50px; 
+}
+
+.reviews figure {
+  width: 45%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 footer h4 {
