--- a/css/main.css
+++ b/css/main.css
@@ -271,7 +271,7 @@ aside p {
 }
 
 aside .form{
-  margin: 30px 15px;
+  margin: 30px 0px;
   width: 100%;
 }
 
@@ -446,9 +446,12 @@ footer .social-icons i {
   background-color: #2a423a;
 }
 
+.contact-content {
+  padding-bottom: 15px;
+}
+
 .contact-content p {
   margin: 0;
-
   color: #fff;
 }
 
